# protovakt

./: .protovakt.yml  Cargo.toml  README.md
src/: main.rs
src/analyzer/: capture.rs  compliance.rs  dpi.rs  engine.rs  mod.rs  performance.rs  reporting.rs
src/cli/: analyze.rs  ci.rs  config_cmd.rs  fuzz.rs  mod.rs  plugin.rs
src/config/: mod.rs  schema.rs
src/core/: crypto.rs  dispatcher.rs  mod.rs  session.rs  state_machine.rs
src/fuzzer/: engine.rs  grammar.rs  mod.rs  mutation.rs  stateful.rs  strategies.rs
src/protocols/: base.rs  http.rs  mod.rs  tcp.rs  tls.rs
src/utils/: address.rs  duration.rs  mod.rs
